--- a/project4/LeWitt_web-drawing-number-1/index.html
+++ b/project4/LeWitt_web-drawing-number-1/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>From the DOM Object &ldquo;a&rdquo;: Blue Lines to Four Corners, Green Lines to Four Sides, and Red Lines Between the DOM Objects &ldquo;a&rdquo;</title>
+  <title>From the DOM Object &ldquo;a&rdquo;: Blue Lines to Four Corners, Green Lines to Four Sides, and Red Lines Between the DOM Objects &ldquo;a&rdquo;on the Digital Page, 2017</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css" type="text/css" />
@@ -17,7 +17,7 @@
       <h2>This is to certify that the Sol Lewitt web drawing number 1 evidenced by this certificate is authentic.</h2>
     </div>
     <div class="middle">
-      <h3>From the DOM Object &ldquo;a&rdquo;: Blue Lines to Four Corners, Green Lines to Four Sides, and Red Lines Between the DOM Objects &ldquo;a&rdquo;</h3>
+      <h3>From the DOM Object &ldquo;a&rdquo;: Blue Lines to Four Corners, Green Lines to Four Sides, and Red Lines Between the DOM Objects &ldquo;a&rdquo; on the Digital Page, 2017</h3>
 <pre><code class="javascript">(function&nbsp;()&nbsp;{</code>
 <code class="javascript">&nbsp;&nbsp;var&nbsp;body&nbsp;=&nbsp;document.body</code>
 <code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;,&nbsp;html&nbsp;=&nbsp;document.documentElement;</code>
@@ -48,19 +48,6 @@
 <code class="javascript">&nbsp;&nbsp;};</code>
 <code class="javascript">&nbsp;&nbsp;var&nbsp;ctx&nbsp;=&nbsp;canv.getContext(&quot;2d&quot;);</code>
 <code class="javascript">&nbsp;&nbsp;ctx.lineWidth&nbsp;=&nbsp;1;</code>
-<code class="javascript">&nbsp;&nbsp;ctx.strokeStyle&nbsp;=&nbsp;&quot;rgba(200,0,0,0.2)&quot;;</code>
-<code class="javascript">&nbsp;&nbsp;for&nbsp;(i&nbsp;=&nbsp;0;&nbsp;i&nbsp;&lt;&nbsp;anchors.length;&nbsp;i&nbsp;=&nbsp;i&nbsp;+&nbsp;2)&nbsp;{</code>
-<code>&nbsp;&nbsp;&nbsp;&nbsp;for&nbsp;(j&nbsp;=&nbsp;0;&nbsp;j&nbsp;&lt;&nbsp;anchors.length;&nbsp;j&nbsp;=&nbsp;j&nbsp;+&nbsp;2)&nbsp;{</code>
-<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;x1&nbsp;=&nbsp;anchorLocs[i];</code>
-<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;y1&nbsp;=&nbsp;anchorLocs[i&nbsp;+&nbsp;1];</code>
-<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;x2&nbsp;=&nbsp;anchorLocs[j]</code>
-<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;,&nbsp;y2&nbsp;=&nbsp;anchorLocs[j&nbsp;+&nbsp;1]</code>
-<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;,&nbsp;ctx.beginPath();</code>
-<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ctx.moveTo(x1,&nbsp;y1);</code>
-<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ctx.lineTo(x2,&nbsp;y2);</code>
-<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ctx.stroke();</code>
-<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;};</code>
-<code class="javascript">&nbsp;&nbsp;}</code>
 <code class="javascript">&nbsp;&nbsp;ctx.strokeStyle&nbsp;=&nbsp;&quot;rgba(0,0,200,0.2)&quot;;</code>
 <code>&nbsp;&nbsp;var&nbsp;corners&nbsp;=&nbsp;[0,&nbsp;0,&nbsp;fullWidth,&nbsp;0,&nbsp;0,&nbsp;fullHeight,&nbsp;fullWidth,&nbsp;fullHeight]</code>
 <code class="javascript">&nbsp;&nbsp;for&nbsp;(i&nbsp;=&nbsp;0;&nbsp;i&nbsp;&lt;&nbsp;corners.length;&nbsp;i&nbsp;=&nbsp;i&nbsp;+&nbsp;2)&nbsp;{</code>
@@ -81,6 +68,19 @@
 <code>&nbsp;&nbsp;&nbsp;&nbsp;for&nbsp;(j&nbsp;=&nbsp;0;&nbsp;j&nbsp;&lt;&nbsp;anchors.length;&nbsp;j&nbsp;=&nbsp;j&nbsp;+&nbsp;2)&nbsp;{</code>
 <code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;x1&nbsp;=&nbsp;corners[i];</code>
 <code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;y1&nbsp;=&nbsp;corners[i&nbsp;+&nbsp;1];</code>
+<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;x2&nbsp;=&nbsp;anchorLocs[j]</code>
+<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;,&nbsp;y2&nbsp;=&nbsp;anchorLocs[j&nbsp;+&nbsp;1]</code>
+<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;,&nbsp;ctx.beginPath();</code>
+<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ctx.moveTo(x1,&nbsp;y1);</code>
+<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ctx.lineTo(x2,&nbsp;y2);</code>
+<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ctx.stroke();</code>
+<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;};</code>
+<code class="javascript">&nbsp;&nbsp;}</code>
+<code class="javascript">&nbsp;&nbsp;ctx.strokeStyle&nbsp;=&nbsp;&quot;rgba(200,0,0,0.2)&quot;;</code>
+<code class="javascript">&nbsp;&nbsp;for&nbsp;(i&nbsp;=&nbsp;0;&nbsp;i&nbsp;&lt;&nbsp;anchors.length;&nbsp;i&nbsp;=&nbsp;i&nbsp;+&nbsp;2)&nbsp;{</code>
+<code>&nbsp;&nbsp;&nbsp;&nbsp;for&nbsp;(j&nbsp;=&nbsp;0;&nbsp;j&nbsp;&lt;&nbsp;anchors.length;&nbsp;j&nbsp;=&nbsp;j&nbsp;+&nbsp;2)&nbsp;{</code>
+<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;x1&nbsp;=&nbsp;anchorLocs[i];</code>
+<code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;y1&nbsp;=&nbsp;anchorLocs[i&nbsp;+&nbsp;1];</code>
 <code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;x2&nbsp;=&nbsp;anchorLocs[j]</code>
 <code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;,&nbsp;y2&nbsp;=&nbsp;anchorLocs[j&nbsp;+&nbsp;1]</code>
 <code class="javascript">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;,&nbsp;ctx.beginPath();</code>
